@@ -3,6 +3,8 @@ use strict;
 use warnings;
 
 our $VERSION = '0.004';
+# The next line is for inlining
+# <-- START -->
 
 require Carp;
 {
@@ -33,9 +35,16 @@ sub import {
     my $class = shift;
     my $into  = caller;
 
-    my $isa       = _isa($into);
+    # Make sure we list the OLDEST version used to create this class.
+    $Object::HashBase::VERSION{$into} = $Object::HashBase::VERSION
+        if !$Object::HashBase::VERSION{$into}
+        || $Object::HashBase::VERSION{$into} > $Object::HashBase::VERSION;
+
+    my $isa = _isa($into);
+    my $attr_list = $Object::HashBase::ATTR_LIST{$into} ||= [];
     my $attr_subs = $Object::HashBase::ATTR_SUBS{$into} ||= {};
-    my %subs      = (
+
+    my %subs = (
         ($into->can('new') ? () : (new => \&_new)),
         (map %{$Object::HashBase::ATTR_SUBS{$_} || {}}, @{$isa}[1 .. $#$isa]),
         (
@@ -43,12 +52,13 @@ sub import {
                 my $p = substr($_, 0, 1);
                 my $x = $_;
                 substr($x, 0, 1) = '' if $STRIP{$p};
+                push @$attr_list => $x;
                 my ($sub, $attr) = (uc $x, $x);
                 $sub => ($attr_subs->{$sub} = sub() { $attr }),
-                $attr => sub { $_[0]->{$attr} },
-                  $p eq '-' ? ("set_$attr" => sub { Carp::croak("'$attr' is read-only") })
-                : $p eq '^' ? ("set_$attr" => sub { Carp::carp("set_$attr() is deprecated"); $_[0]->{$attr} = $_[1] })
-                :             ("set_$attr" => sub { $_[0]->{$attr} = $_[1] }),
+                    $attr => sub { $_[0]->{$attr} },
+                      $p eq '-' ? ("set_$attr" => sub { Carp::croak("'$attr' is read-only") })
+                    : $p eq '^' ? ("set_$attr" => sub { Carp::carp("set_$attr() is deprecated"); $_[0]->{$attr} = $_[1] })
+                    : ("set_$attr" => sub { $_[0]->{$attr} = $_[1] }),
             } @_
         ),
     );
@@ -57,10 +67,65 @@ sub import {
     *{"$into\::$_"} = $subs{$_} for keys %subs;
 }
 
+sub attr_list {
+    my $class = shift;
+
+    my $isa = _isa($class);
+
+    my %seen;
+    my @list = grep { !$seen{$_}++ } map {
+        my @out;
+
+        if (0.004 > ($Object::HashBase::VERSION{$_} || 0)) {
+            Carp::carp("$_ uses an inlined version of Object::HashBase too old to support attr_list()");
+        }
+        else {
+            my $list = $Object::HashBase::ATTR_LIST{$_};
+            @out = $list ? @$list : ()
+        }
+
+        @out;
+    } reverse @$isa;
+
+    return @list;
+}
+
 sub _new {
-    my ($class, %params) = @_;
-    my $self = bless \%params, $class;
-    $self->init if $self->can('init');
+    my $class = shift;
+
+    my $self;
+
+    if (@_ == 1) {
+        my $arg = shift;
+        my $type = ref($arg);
+
+        if ($type eq 'HASH') {
+            $self = bless({%$arg}, $class)
+        }
+        else {
+            Carp::croak("Not sure what to do with '$type' in $class constructor")
+                unless $type eq 'ARRAY';
+
+            my %proto;
+            my @attributes = attr_list($class);
+            while (@$arg) {
+                my $val = shift @$arg;
+                my $key = shift @attributes or Carp::croak("Too many arguments for $class constructor");
+                $proto{$key} = $val;
+            }
+
+            $self = bless(\%proto, $class);
+        }
+    }
+    else {
+        $self = bless({@_}, $class);
+    }
+
+    $Object::HashBase::CAN_CACHE{$class} = $self->can('init')
+        unless exists $Object::HashBase::CAN_CACHE{$class};
+
+    $self->init if $Object::HashBase::CAN_CACHE{$class};
+
     $self;
 }
 
@@ -126,7 +191,10 @@ use it:
     use warnings;
     use My::Class;
 
-    my $one = My::Class->new(foo => 'MyFoo', bar => 'MyBar');
+    # These are all functionally identical
+    my $one   = My::Class->new(foo => 'MyFoo', bar => 'MyBar');
+    my $two   = My::Class->new({foo => 'MyFoo', bar => 'MyBar'});
+    my $three = My::Class->new(['MyFoo', 'MyBar']);
 
     # Accessors!
     my $foo = $one->foo;    # 'MyFoo'
@@ -180,9 +248,13 @@ If the script was not installed, it can be found int he C<scripts/> directory.
 
 =over 4
 
-=item $it = $class->new(@VALUES)
+=item $it = $class->new(%PAIRS)
 
-Create a new instance using key/value pairs.
+=item $it = $class->new(\%PAIRS)
+
+=item $it = $class->new(\@ORDERED_VALUES)
+
+Create a new instance.
 
 HashBase will not export C<new()> if there is already a C<new()> method in your
 packages inheritance chain.
@@ -204,6 +276,21 @@ This makes it so that HashBase sees that you have your own C<new()> method.
 Alternatively you can define the method before loading HashBase instead of just
 declaring it, but that scatters your use statements.
 
+The most common way to create an object is to pass in key/value pairs where
+each key is an attribute and each value is what you want assigned to that
+attribute. No checking is done to verify the attributes or values are valid,
+you may do that in C<init()> if desired.
+
+If you would like, you can pass in a hashref instead of pairs. When you do so
+the hashref will be copied, and the copy will be returned blessed as an object.
+There is no way to ask HashBase to bless a specific hashref.
+
+In some cases an object may only have 1 or 2 attributes, in which case a
+hashref may be too verbose for your liking. In these cases you can pass in an
+arrayref with only values. The values will be assigned to attributes in the
+order the attributes were listed. When there is inheritence involved the
+attributes from parent classes will come before subclasses.
+
 =back
 
 =head2 HOOKS
@@ -215,9 +302,17 @@ declaring it, but that scatters your use statements.
 This gives you the chance to set some default values to your fields. The only
 argument is C<$self> with its indexes already set from the constructor.
 
+B<Note:> Object::HashBase checks for an init using C<< $class->can('init') >>
+during construction. It DOES NOT call C<can()> on the created object. Also note
+that the result of the check is cached, it is only ever checked once, the first
+time an instance of your class is created. This means that adding an C<init()>
+method AFTER the first construction will result in it being ignored.
+
 =back
 
 =head1 ACCESSORS
+
+=head2 READ/WRITE
 
 To generate accessors you list them when using the module:
 
@@ -246,6 +341,32 @@ and similar typos. It will not help you if you forget to prefix the '+' though.
 
 =back
 
+=head2 READ ONLY
+
+    use Object::HashBase qw/-foo/;
+
+=over 4
+
+=item set_foo()
+
+Throws an exception telling you the attribute is read-only. This is exported to
+override any active setters for the attribute in a parent class.
+
+=back
+
+=head2 DEPRECATED SETTER
+
+    use Object::HashBase qw/^foo/;
+
+=over 4
+
+=item set_foo()
+
+This will set the value, but it will also warn you that the method is
+deprecated.
+
+=back
+
 =head1 SUBCLASSING
 
 You can subclass an existing HashBase class.
@@ -255,6 +376,27 @@ You can subclass an existing HashBase class.
 
 The base class is added to C<@ISA> for you, and all constants from base classes
 are added to subclasses automatically.
+
+=head1 GETTING A LIST OF ATTRIBUTES FOR A CLASS
+
+Object::HashBase provides a function for retrieving a list of attributes for an
+Object::HashBase class.
+
+=over 4
+
+=item @list = Object::HashBase::attr_list($class)
+
+=item @list = $class->Object::HashBase::attr_list()
+
+Either form above will work. This will return a list of attributes defined on
+the object. This list is returned in the attribute definition order, parent
+class attributes are listed before subclass attributes. Duplicate attributes
+will be removed before the list is returned.
+
+B<Note:> This list is used in the C<< $class->new(\@ARRAY) >> constructor to
+determine the attribute to which each value will be paired.
+
+=back
 
 =head1 SOURCE
 
