@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+    - Add ability to get a list of attributes
+    - Add hashref and arrayref constructors
+    - Cache $class->can('init') for Test2 performance
+    - Add docs for deprecated and read-only setters
+    - Better inline tokens, do not rely on VERSION
+
 0.003     2016-12-10 21:50:47-08:00 America/Los_Angeles
 
     - Do not use autoload
